--- a/templates/student.html
+++ b/templates/student.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action = "http://localhost:5000/result" method = "POST">
+        <form action = "/result" method = "POST">
             <table border = 1>
                 <tr>
                     <th>No.</th>
