--- a/templates/grades.html
+++ b/templates/grades.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form action = "/result" method = "POST">
+        <form action = "/gpa" method = "POST">
             <table border = 1>
                 <tr>
                     <th>No.</th>
